Правки кода